feat(step-19): integrate openai structured-output agents

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,12 @@
 
 BRAIN_CREDENTIAL_EMAIL=your_email@example.com
 BRAIN_CREDENTIAL_PASSWORD=your_password
+
+# Step-19 LLM provider (OpenAI)
+OPENAI_API_KEY=your_openai_api_key
+BRAIN_LLM_PROVIDER=openai
+BRAIN_LLM_MODEL=gpt-5.2
+BRAIN_LLM_REASONING_EFFORT=medium
+BRAIN_LLM_VERBOSITY=medium
+BRAIN_LLM_REASONING_SUMMARY=auto
+BRAIN_LLM_MAX_OUTPUT_TOKENS=2200
