--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ BRAIN_LLM_REASONING_EFFORT=medium
 BRAIN_LLM_VERBOSITY=medium
 BRAIN_LLM_REASONING_SUMMARY=auto
 BRAIN_LLM_MAX_OUTPUT_TOKENS=2200
+
+# Frontend (Next.js) CORS origins for FastAPI server
+BRAIN_UI_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
